--- a/restaurarContraseña.html
+++ b/restaurarContraseña.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear Usuario</title>
+    <title>Recuperar Contraseña</title>
     <link rel="stylesheet" href="css/estilosGenerales.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/css/all.min.css">
@@ -13,47 +13,42 @@
     <header class="cabezera">
         <div class="cabezera__contenido">
             <img src="imagenes/img-logo.svg" alt="" srcset="">               
-            <h3>CREAR USUARIO</h3>
+            <h3>RESTAURAR CONTRASEÑA</h3>
             <i class="fas fa-user-circle"></i>
         </div>
+        <nav class="menu-usuario">
+            <ul>
+                <li><a href="#">Diego Chambi</a></li>
+                <li><a href="#">Cambiar contraseña</a></li>
+                <li><a href="#">Crear Usuario</a></li>
+                <li><a href="#">Salir</a></li>
+            </ul>
+        </nav>
     </header>
     <main class="principal">
-        <form class="formulario formulario--crearUsuario" action="" method="post">
+        <form class="formulario formulario--resetContraseña" action="" method="post">
+            <div class="formulario__mensaje">
+                <p>Para cambiar su contraseña, introduzca su contraseña actual, después introduzca su nueva contraseña. La nueva contraseña deve contener entre 8 y 16 caracteres, una letra minúscula, una letra mayúscula, un digito y un caracter especial de los siguientes(- , _ , *)</p>
+            </div>
             <div class="formulario__items">
                 <div class="formulario__items-input">
-                    <input type="text" name="" placeholder="Nombre" title="El nombre solo acepta letras y espacios en blanco" data-regex="^([a-zA-ZñÑáÁÉéÍíÓóÚú\s]{3,40})$">
+                    <input type="password" name="" placeholder="Contraseña Actual" title="" data-regex="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[*_\-])\S{8,16}$" required>
+                    <i class="fas fa-eye"></i>
                 </div>
             </div>
             <div class="formulario__items">
                 <div class="formulario__items-input">
-                    <input type="text" name="" placeholder="Apellido Paterno" title="El apellido solo acepta letras" data-regex="^([a-zA-ZñÑáÁÉéÍíÓóÚú]{3,30})$">
+                    <input type="password" name="" placeholder="Nueva Contraseña" title="La contraseña escrita no cumple los requisitos de seguridad minimos" data-regex="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[*_\-])\S{8,16}$" required>
+                    <i class="fas fa-eye"></i>
                 </div>
             </div>
             <div class="formulario__items">
                 <div class="formulario__items-input">
-                    <input type="text" name="" placeholder="Apellido Materno" title="El apellido solo acepta letras" data-regex="^([a-zA-ZñÑáÁÉéÍíÓóÚú]{3,30})$">
+                    <input type="password" name="" placeholder="Repetir nueva contraseña" title="El apellido solo acepta letras" data-regex="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[*_\-])\S{8,16}$" required>
+                    <i class="fas fa-eye"></i>
                 </div>
             </div>
-            <div class="formulario__items">
-                <div class="formulario__items-input">
-                    <input type="text" name="" placeholder="C.I." title="El campo C.I. solo acepta numeros" data-regex="^([0-9]{8,10})$">
-                </div>
-            </div>
-            <div class="formulario__items">
-                <div class="formulario__items-input">
-                    <input type="tel" name="" placeholder="Telefono o Celular" title="El campo telefono solo acepta numeros" data-regex="^([0-9]{8,10})$">
-                </div>
-            </div>
-            <div class="formulario__items">
-                <div class="formulario__items-input">
-                    <select name="" id="">
-                        <option value="">Vendedor</option>
-                        <option value="">Administrador</option>
-                    </select>
-                    <i class="fas fa-angle-down"></i>
-                </div>
-            </div>
-            <input type="submit" value="Crear Usuario">
+            <input type="submit" value="Restaurar Contraseña">
         </form>
     </main>
     <nav class="menu">
